Mise à jour du formulaire

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           ></textarea>
         </div>
 
-        <!-- Anti-spam invisible -->
+        <!-- Anti-spam -->
         <input type="text" name="_gotcha" style="display: none" />
 
         <button type="submit" class="submit-btn">Envoyer le message</button>
