--- a/index.html
+++ b/index.html
@@ -383,5 +383,37 @@
         });
       });
     </script>
+    <script>
+      const form = document.getElementById("contact-form");
+      const status = document.getElementById("form-status");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+
+        const data = new FormData(form);
+
+        try {
+          const response = await fetch(form.action, {
+            method: form.method,
+            body: data,
+            headers: {
+              Accept: "application/json",
+            },
+          });
+
+          if (response.ok) {
+            status.textContent = "✅ Message envoyé avec succès !";
+            status.className = "form-status success";
+            form.reset();
+          } else {
+            status.textContent = "❌ Une erreur est survenue. Réessayez.";
+            status.className = "form-status error";
+          }
+        } catch (error) {
+          status.textContent = "❌ Problème de connexion.";
+          status.className = "form-status error";
+        }
+      });
+    </script>
   </body>
 </html>
