mise à jour des projets

--- a/index.html
+++ b/index.html
@@ -194,15 +194,15 @@
         <div class="projet-card">
           <img
             src="python.jpg"
-            alt="Projet 1"
+            alt="Projet 2"
             height="200px"
             class="projet-img"
           />
           <div class="projet-info">
-            <h3 class="projet-title">Jeu python</h3>
+            <h3 class="projet-title">Qr code generator</h3>
             <p class="projet-description">
-              Un jeu codé en python de manière ascii qui reprend le principe
-              d'un space invader
+              Une petite application python utilisant des librairies python pour
+              la génération de qr code personnalisable
             </p>
             <div class="projet-tech">
               <span class="tech-tag">React</span>
