mise à jour des projets

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <!--2nde card-->
         <div class="projet-card">
           <img
-            src="python.jpg"
+            src="code_qr.png"
             alt="Projet 2"
             height="200px"
             class="projet-img"
