mise à jour des projets

--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
               <span class="tech-tag">Node.js</span>
             </div>
             <div class="projet-links">
-              <a href="#" class="projet-link"
+              <a
+                href="https://ewenoff.github.io/qr_code_generator/"
+                class="projet-link"
                 ><i class="fas fa-external-link-alt"> </i>Live Demo</a
               >
               <a href="#" class="projet-link"
