--- a/index.html
+++ b/index.html
@@ -89,33 +89,40 @@
       <div class="competence-content">
         <div class="competence-text">
           <p>
-            Je possède des compétences solides en cybersécurité, allant de
-            l’analyse de vulnérabilités à la réalisation de tests d’intrusion.
-            J’ai pu mettre en pratique mes connaissances sur des plateformes
-            comme TryHackMe et Hack The Box, où j’ai réalisé des challenges
-            d’exploitation de failles, de reverse engineering et de capture de
-            drapeaux. Je suis également à l’aise avec la sécurisation
-            d’applications web et la mise en place de bonnes pratiques pour
-            protéger des systèmes.
+            Je m’intéresse particulièrement à la cybersécurité offensive et à la
+            compréhension concrète des failles. J’ai développé mes compétences à
+            travers des plateformes comme TryHackMe et Hack The Box, où j’ai
+            travaillé sur des challenges de tests d’intrusion, exploitation de
+            vulnérabilités, reverse engineering et CTF. J’ai notamment participé
+            à une initiation au bug bounty lors du festival Unlock Your Brain –
+            Harden Your System à Brest, ce qui m’a permis de confronter mes
+            connaissances à des scénarios réalistes et de renforcer ma
+            méthodologie d’analyse. Je m’intéresse aussi à la sécurisation des
+            applications web, en appliquant de bonnes pratiques pour limiter les
+            failles courantes et améliorer la robustesse des systèmes.
           </p>
           <p>
-            Je développe des projets en Rust, en mettant l’accent sur la
-            performance et la sécurité mémoire. J’ai notamment travaillé sur des
-            petits outils systèmes et des scripts d’automatisation, en
-            exploitant la gestion stricte des types et la sécurité
-            concurrentielle de Rust. Ce langage me permet de créer des
-            programmes rapides et fiables, tout en appliquant de bonnes
-            pratiques de développement moderne.
+            Je développe des projets en Rust avec un fort intérêt pour la
+            sécurité mémoire, la performance et la fiabilité du code. J’ai
+            travaillé sur plusieurs projets intégrant la programmation orientée
+            objet, ainsi que sur de petits outils systèmes et scripts
+            d’automatisation. Rust m’a permis d’adopter une approche plus
+            rigoureuse du développement, notamment grâce à son système de types
+            strict et à sa gestion sécurisée de la concurrence. C’est un langage
+            que j’apprécie pour sa capacité à produire des programmes robustes,
+            tout en encourageant de bonnes pratiques de développement.
           </p>
           <p>
-            En Python, je réalise des scripts pour l’automatisation, l’analyse
-            de données et la création de petits outils réseau, en utilisant des
-            bibliothèques comme requests, pandas ou scapy. En JavaScript, je
-            développe des interfaces web interactives et dynamiques, avec des
-            animations, des effets visuels et des fonctionnalités côté client,
-            tout en appliquant les principes modernes du développement
-            front-end. Ces compétences me permettent de créer des applications
-            complètes, allant du script backend à l’interface utilisateur.
+            En Python, je réalise des projets orientés programmation orientée
+            objet, ainsi que des scripts d’automatisation et d’analyse de
+            données. J’ai utilisé des bibliothèques comme NumPy, Matplotlib et
+            Pandas pour manipuler, analyser et visualiser des données, mais
+            aussi pour concevoir des outils pratiques et exploitables. En
+            JavaScript, je développe des interfaces web dynamiques et
+            interactives, en travaillant sur les animations, les effets visuels
+            et les fonctionnalités côté client. Cette polyvalence me permet de
+            concevoir des projets complets, du script logique jusqu’à
+            l’interface utilisateur.
           </p>
         </div>
         <div class="skills">
@@ -440,6 +447,7 @@
         });
       });
     </script>
+    <!--gestion du formulaire et réponse mess-->
     <script>
       const form = document.getElementById("contact-form");
       const status = document.getElementById("form-status");
