--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <div class="presentation-content">
         <h1>
           Bonjour, je suis <span>Ewen Daniel</span><br />Etudiant en 3ème année
-          d'école d'ingénieur à la recherche d'un contrat d'alternance de 2 ans.
+          d'école d'ingénieur à L'ENIB, à la recherche d'un contrat d'alternance
+          de 2 ans.
         </h1>
         <p>
           Voici un portfolio, qui montre l'étendu de mon travail avec des petits
