correction de fto

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
           de 2 ans.
         </h1>
         <p>
-          Voici un portfolio, qui montre l'étendu de mon travail avec des petits
-          projets que j'ai pu effectuer, mon expérience dans différents
-          domaines, ce que le sport m'a apporté dans la vie de tous les jours et
-          enfin un onglet contact fonctionnel directement relié à ma boite mail.
+          Voici un portfolio qui montre l’étendue de mon travail, avec des
+          petits projets que j’ai pu réaliser, mon expérience dans différents
+          domaines, ce que le sport m’a apporté dans la vie de tous les jours,
+          et enfin un onglet Contact fonctionnel, directement relié à ma boîte
+          mail.
         </p>
         <a href="#contact" class="cta-button">Envoyez moi un message !</a>
       </div>
