correction de fto 2.0

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       <div class="press-impact">
         <h3>Ce que cette expérience m’a apporté</h3>
         <p>
-          Mon expérience en sport-études, enrichie par un titre de championne de
+          Mon expérience en sport-études, enrichie par un titre de champion de
           France de futsal, m’a appris à évoluer dans un cadre exigeant où la
           rigueur, la discipline et la constance sont essentielles. Le sport de
           haut niveau m’a permis de développer un fort sens de l’engagement, une
@@ -314,7 +314,7 @@
           méthodique du travail, une bonne gestion de la pression et une
           détermination à aller au bout des projets, même face aux difficultés.
           Des qualités que je mets aujourd’hui au service de mon parcours
-          académique et professionnel.
+          académique.
         </p>
       </div>
     </section>
