correction de fto 3.0

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="presentation" id="home">
       <div class="presentation-content">
         <h1>
-          Bonjour, je suis <span>Ewen Daniel</span><br />Etudiant en 3ème année
+          Bonjour, je suis <span>Ewen Daniel</span><br />étudiant en 3ème année
           d'école d'ingénieur à L'ENIB, à la recherche d'un contrat d'alternance
           de 2 ans.
         </h1>
